:bug: Fixx tabs not showing the correct size

--- a/styles/src/layout/foundryUI.less
+++ b/styles/src/layout/foundryUI.less
@@ -21,8 +21,10 @@ i {
   >li { background: rgb(10 3 3 / 85%) !important; }
 }
 
-.tab {
-  &[data-tab] {
-    &.active { width: 777px; }
+.tabs {
+  .tab {
+    &[data-tab] {
+      &.active { width: 777px; }
+    }
   }
 }
